# ACE

./: .gitattributes  .gitignore  BUILD-MACOS.sh  BUILD-WINDOWS.bat  BUILD-WINDOWS.ps1  CHANGELOG.md  CODEX.md  COMPREHENSIVE_ANALYSIS.md  Cargo.toml  Comprehensive Analysis -Abridged.md  DISRUPTOR-ROADMAP.md  ENHANCEMENT-ROADMAP.md  EXECUTIVE_SUMMARY.html  INSTALL.md  LLM_PROMPT_HIGH_RISK.md  README.md  ROADMAP-KING.md  TODO-1.0.md  TODO-2.0.md  VIEW-EDIT-SAVE-STATUS.md  Vsassy-browser-FIXEDbuild_output.txt  Vsassy-browser-FIXEDcheck_output_full.txt  Vsassy-browser-FIXEDwarn_lines.txt  Vsassy-browser-FIXEDwarnings_full.txt  apply_voice_clean.py  build.bat  build.rs  build.sh  build_output.txt  check_output.txt  classify_warnings.py  count_warns.py  detailed_warnings.txt  dev_console_patch.txt  extract_warns.py  extract_warns2.py  fix_all_warnings.py  fix_cloud_transcribe.py  fix_dead_code.py  fix_deadcode.py  (+24 more)
.claude/: settings.example.json  settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
Business Documents/: 2026-02-14_01-COMPANY-ACTION-PLAN.md  2026-02-14_02-PATENT-STRATEGY.md  2026-02-14_03-LEGAL-CHECKLIST.md  2026-02-14_04-FINANCIAL-MODEL.md  2026-02-14_05-GO-TO-MARKET.md  2026-02-14_06-HIRING-PLAYBOOK.md  2026-02-14_07-SECURITY-AUDIT-RFP.md  2026-02-14_08-DATA-ROOM-INDEX.md  2026-02-14_09-BRAND-GUIDELINES.md  2026-02-14_10-RELEASE-CHECKLIST.md  convert_to_pdf.py
Business Documents/INVEST/: 2026-02-14_01-EXECUTIVE-SUMMARY.md  2026-02-14_02-TECHNICAL-ARCHITECTURE.md  2026-02-14_03-COMPETITIVE-ANALYSIS.md  2026-02-14_04-PRODUCT-ROADMAP.md  2026-02-14_05-CODEBASE-STATS.md  2026-02-14_06-PRIVACY-WHITEPAPER.md  2026-02-14_07-MARKET-OPPORTUNITY.md  2026-02-14_08-TEAM-AND-ASK.md  2026-02-14_09-FEATURE-DEEP-DIVES.md  2026-02-14_10-RISK-AND-MITIGATION.md
Business Documents/INVEST/teaser/: 2026-02-14_TEASER-01-ONE-PAGER.md  2026-02-14_TEASER-02-SLIDE-DECK.md  2026-02-14_TEASER-03-WHY-SASSY.md
SassyBrowser-v2.0.0-Investor-Preview/sample-files/: Dockerfile  app.js  changes.patch  employees.csv  example.toml  inventory.py  quarterly-report.md  settings.ini  styles.css
config/: ai.toml
config/.claude/worktrees/angry-feynman/.claude/: settings.local.json
extensions/sample-extension/: background.js  content.js  manifest.json
installer/: BUILD-MSI.md  LICENSE.rtf  build-msi.bat  sassy.wxs
installer/SassyBrowser-2.0.0-portable/: function Get-RandomHex.ps1  sync.toml
installer/pkg/: LICENSE  README.md  ai.toml  default_theme.toml
investor-package/: README.txt
investor-package/sample-files/: .gitignore  config.json  example.env  gene-data.tsv  sample_code.rs  sequences.fasta  viewer.ts
investor-samples/: Makefile  README.txt  build.sh  caffeine.mol  catalog.xml  config.yaml  landing-page.html  overview.rtf  schema.graphql  schema.sql  whitepaper.tex
phone-app/: index.html  manifest.json
scripts/: build.ps1  build.sh  find-bad-filenames.ps1  find-bad-filenames.sh  repair-git-index.ps1  repair-git-index.sh
src/: adblock.rs  ai.rs  app.rs  auth.rs  behavioral_mimicry.rs  behavioral_mimicry_level4.rs  case.rs  console.rs  cookies.rs  crypto.rs  data.rs  detection.rs  dom.rs  engine.rs  extensions.rs  family_profiles.rs  file_handler.rs  fontcase.rs  health.rs  hittest.rs  html_renderer.rs  http_client.rs  hunter_mode.rs  hunter_suite.rs  icons.rs  imaging.rs  input.rs  json_viewer.rs  layout.rs  layout_engine.rs  main.rs  markdown.rs  mcp.rs  mcp_api.rs  mcp_client.rs  mcp_codec.rs  mcp_fs.rs  mcp_git.rs  mcp_panel.rs  mcp_protocol.rs  (+22 more)
src/browser/: bookmarks.rs  download.rs  engine.rs  history.rs  mod.rs  runner.rs  tab.rs  webview.rs
src/devtools/: mcp_orchestrator_exercise.rs  mod.rs
src/js/: css.rs  dom.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  tests.rs  value.rs
src/sandbox/: mod.rs  network.rs  page.rs  popup.rs  quarantine.rs
src/scripts/: bridge.js
src/sync/: family.rs  mod.rs  protocol.rs  secure.rs  server.rs  users.rs
src/ui/: app.rs  input.rs  mod.rs  network.rs  network_bar.rs  popup.rs  render.rs  sidebar.rs  tabs.rs  theme.rs
src/viewers/: archive.rs  audio.rs  chemical.rs  document.rs  ebook.rs  font.rs  image.rs  mod.rs  model3d.rs  pdf.rs  spreadsheet.rs  text.rs  video.rs
wasm-demo/: Cargo.toml  index.html
wasm-demo/src/: lib.rs
