[package]
name = "sassy-entropy-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Sassy Consulting LLC <shane@sassyconsultingllc.com>"]
description = "WebAssembly entropy visualization - same Rust code as the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
] }
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"

[profile.release]
lto = true
opt-level = "z"
